--- a/src/Components/Translations/en.json
+++ b/src/Components/Translations/en.json
@@ -6,7 +6,7 @@
   "RENTING": "Rent",
   "DAILY": "Daily",
   "Property_Type": "Property Type",
-  "Բնակարան":"Apartment",
+  "Բնակարան": "Apartment",
   "Առանձնատուն": "House",
   "Կոմերցիոն": "Commercial",
   "Հողատարածք": "Land",
@@ -23,7 +23,7 @@
   "Նորք Մարաշ": "Norq-Marash",
   "Շենգավիթ": "Shengavit",
   "Նուբարաշեն": "Nubarashen",
-  "Ավան":  "Avan",
+  "Ավան": "Avan",
   "Rooms": "Rooms",
   "Area": "Area",
   "Price": "Price",
@@ -64,8 +64,8 @@
   "No": "No",
   "Rent_Page": "Rent Page",
   "Contact_Us": "Contact Us",
-  "Contact_Summary" : "We are a dedicated team of real estate professionals,committed to helping you find your dream home or investment property.Contact us today for personalized service and expert guidance.",
-  "Telephone": "Telephone" ,
+  "Contact_Summary": "We are a dedicated team of real estate professionals,committed to helping you find your dream home or investment property.Contact us today for personalized service and expert guidance.",
+  "Telephone": "Telephone",
   "Address": "Address",
   "Our_Location": "Our Location",
   "Submit": "Submit",
@@ -75,42 +75,387 @@
   "Build_type": "Build type",
   "Condition": "Condition",
   "Total_space": "Total space",
-  "M":"M",
+  "M": "M",
   "Contact_Me": "Contact Me",
-  "Your_Number":"Your Number",
-  "FACILITIES":"FACILITIES",
-  "More_Information":"More Information",
-  "Gas":"Gas",
-  "Internet":"Internet",
-  "Electricity":"Electricity",
-  "Water":"Water",
-  "Heating_System":"Heating System",
-  "Conditioner":"Conditioner",
-  "Sunny":"sunny",
-  "Beautiful_view":"Beautiful view",
-  "Fireplace":"Fireplace",
-  "Elevator":"Elevator",
-  "Storage_room":"Storage room",
-  "Roadside":"Roadside",
-  "Sauna":"Sauna",
-  "Kitchen_furniture":"Kitchen furniture",
-  "Parking":"Parking",
-  "Open_balcony":"Open balcony",
-  "Basement":"Basement",
-  "High_first_floor":"High first floor",
-  "Near_the_bus_stop":"Near the bus stop",
-  "Park":"Park",
-  "Furniture":"Furniture",
-  "Security":"Security",
-  "Loggia":"Loggia",
-  "Attic":"Attic",
-  "Heated_floor":"Heated floor",
-  "Metro":"Metro",
-  "Fenced":"Fenced",
-  "Technics":"Technics",
+  "Your_Number": "Your Number",
+  "FACILITIES": "FACILITIES",
+  "More_Information": "More Information",
+  "Gas": "Gas",
+  "Internet": "Internet",
+  "Electricity": "Electricity",
+  "Water": "Water",
+  "Heating_System": "Heating System",
+  "Conditioner": "Conditioner",
+  "Sunny": "sunny",
+  "Beautiful_view": "Beautiful view",
+  "Fireplace": "Fireplace",
+  "Elevator": "Elevator",
+  "Storage_room": "Storage room",
+  "Roadside": "Roadside",
+  "Sauna": "Sauna",
+  "Kitchen_furniture": "Kitchen furniture",
+  "Parking": "Parking",
+  "Open_balcony": "Open balcony",
+  "Basement": "Basement",
+  "High_first_floor": "High first floor",
+  "Near_the_bus_stop": "Near the bus stop",
+  "Park": "Park",
+  "Furniture": "Furniture",
+  "Security": "Security",
+  "Loggia": "Loggia",
+  "Attic": "Attic",
+  "Heated_floor": "Heated floor",
+  "Metro": "Metro",
+  "Fenced": "Fenced",
+  "Technics": "Technics",
   "Lift": "Elevator",
   "Daily_Page": "Daily",
   "Այո": "Yes",
   "Ոչ": "No",
-  "Newly_Built": "Newly built"
+  "Newly_Built": "Newly built",
+  "Ա. Սերոբ փող.": "A. Serob St.",
+  "Ա. Տիգրանյան փող.": "A. Tigranian St.",
+  "Ավետիսյան փող.": "Avetisyan St.",
+  "Ադոնց փող.": "Adonts St.",
+  "Ազատության 2-րդ նրբանցք": "Azatutyan 2nd lane .",
+  "Ազատության պող.": "Azatutyan Ave.",
+  "Հակոբյան փող": "Hakobyan St.",
+  "Արաբկիր 17 փող.": "Arakir 17 st.",
+  "Արաբկիր 19 փ.": "Arabkir 19 st.",
+  "Արաբկիր 21 փող.": "Arabkir 21 st.",
+  "Արաբկիր 25 փող..": "Arabkir 25 st.",
+  "Արաբկիր 27 փող.": "Arabkir 27 st.",
+  "Արաբկիր 37 փող.": "Arabkir 37 st.",
+  "Արաբկիր 39 փող.": "Arabkir 39 st.",
+  "Արաբկիր 43 փող.": "Arabkir 43 st.",
+  "Արաբկիր 51 փող.": "Arabkir 51 st.",
+  "Բաբայան փող": "Babayan St.",
+  "Բակունց փող.": "Bakunts St.",
+  "Բարբուսի փող": "Barbus St.",
+  "Վ. Դավթյան փող": "V. Davtyan St.",
+  "Վաղարշյան փող.": "Vagarshyan St.",
+  "Վրացական 4րդ նրբ.": " Vratsakan 4th lane",
+  "Վրացական փող.": "Vratsakan St.",
+  "Գ. Արծրունի փող": "G. Artsruni St.",
+  "Քոչարի փող": "Kochar St.",
+  "Վ. Համբարձումյան փող": "V. Hambardzumyan St.",
+  "Գործկոմի փող.": "Gortskom, St.",
+  "Գրիբոյեդով 1 նրբ.": "Griboedov 1st lane",
+  "Գրիբոյեդովի փող": "Griboedov St.",
+  "Գուլական փող": "Gulakan St.",
+  "Գյուլբենկյան փող.": "Gulbenkean St.",
+  "Երզնկյան փող.": "Erznkyan St.",
+  "Զարյան փող": "Zaryan St.",
+  "Կապանցյան փող": "Kapantsyan St.",
+  "Կասյան փող": "Kasyan St.",
+  "Քեռու փող": "Keru St.",
+  "Կիևյան 1 նրբ.": "Kievan 1 lane",
+  "Կիևյան փող": "Kievan St.",
+  "Կոմիտաս պող.": "Komitas ave.",
+  "Մալխասյան փող": "Malkhasyan St.",
+  "Մամիկոնյանց նրբ.": "Mamikonyants lane.",
+  "Մամիկոնյանց փող": "Mamikonyants St.",
+  "Ն. Տիգրանյան փկղ.": "N. Tigranian imp.",
+  "Ն. Դուման փող": "N. Duman St.",
+  "Ն. Տիգրանան փող": "N. Tigranian St.",
+  "Հ. Արղության փող": "H. Arghutyan St.",
+  "Հ. Էմին փող": "H. Emin St.",
+  "Օրբելի փող": "Orbeli St.",
+  "Փափազյան փող": "Papazyan St.",
+  "Ռիգայի փող": "Riga St.",
+  "Ս. Սաքո փող": "S. Sako St.",
+  "Սոսե փող.": "Sose str.",
+  "Սունդուկյան փող": "Sundukyan St.",
+  "Սուրենսանց փող": "Surenants St.",
+  "Տոլբուխինա փող": "Tolbukhina St.",
+  "Խաչատրյան 1 նրբ.": "Khachatryan 1 lane",
+  "Խաչատրյան փող.": "Khachatryan St.",
+  "Շահսուվարյան փող.": "Shakhsuvaryan St.",
+  "Շիրվանզադե փող": "Shirvanzade St.",
+  "Ավան Առինջ 1 միկր.": "Avan Arinj 1st mic.",
+  "Ավան Առինջ 2 միկր.": "Avan Arinj 2nd mic",
+  "Ավան Առինջ Վ. Տերյան_ 1 փող.": "Avan Arinյ V. Teryan_ 1 st.",
+  "Ավան Վարուժան թղմ.": "Avan Varuzhan dist.",
+  "Ավան Դուրյան": "Avan Duryan dist.",
+  "Ավան Իսահակյան թաղ. ": "Avan Isahakyan dist.",
+  "Ավան Քուչակ թաղ.": "Avan Kuchak dist.",
+  "Ավան Նարեկացի թաղ.": "Avan Narekatsi dist.",
+  "Ավան Օգանեսյան թաղ.": "Avan Oganesyan dist.",
+  "Ավան Սայաթ Նովա թաղ.": "Avan Sayat Nova dist.",
+  "Ավան Թումանյան թաղ.": "Avan Tumanyan dist.",
+  "Ավան Չարենց թաղ.": "Avan Charents dist.",
+  "Առինջ Աբովյան թաղ.": "Arinj Abovyan dist.",
+  "Առինջ Մ. Մկրտչյան": "Arinj M. Mkrtchyan",
+  "Առինջ Պ. Սեւակ թաղ.": "Arinj P. Sevak dist.",
+  "Աճառյան փող": "Acharyan St.",
+  "Խուդյակովի փող": "Khudyakov St.",
+  "Ծարավ Աղբյուր": "C. Aghbyur",
+  "16-րդ Թղմ.": "16th Kvartal",
+  "Ա. Սարգսյան փող.": "A. Sarksyan St.",
+  "Աբելյան փող.": "Abelian St.",
+  "Հալաբյան փող": "Halabyan St.",
+  "Արզումանյան փող": "Arzumanyan St.",
+  "Բաշինջաղյան 1 նրբ.": "Bashinjagyan 1 lane",
+  "Բաշինջաղյան 1 փող.": "Bashinjagyan 1 st.",
+  "Բաշինջաղյան 2 նրբ.": "Bashinjagyan 2 lane",
+  "Բաշինջաղյան փող.": "Bashinjagyan St.",
+  "Է. Ալիխանյան փող.": "E. Alikhanyan St.",
+  "Լենինականի փող.": "Leninakani St.",
+  "Լենինգրադյան": "Leningradyan",
+  "Մազմանյան փող": "Mazmanyan St.",
+  "Մարգարյան 1 նրբ.": "Margaryan 1st lane",
+  "Մարգարյան 2 նրբ.": "Margaryan 2nd lane.",
+  "Մարգարյան նրբ.": "Margaryan lane.",
+  "Մարգարյան փող.": "Margaryan St.",
+  "Մելքումովի փող": "Melkumov St.",
+  "Նազարբեկյան փող.": "Nazarbekyan St.",
+  "Նորաշեն թղմ.": "Norashen Kvartal",
+  "Սիսակյան փող": "Sisakyan St.",
+  "Ֆուչիկ 1 նրբ": "Fuchik 1st lane",
+  "Ֆուչիկի փող": "Fuchik St.",
+  "Շինարարների փող.": "Shinararner St.",
+  "Շիրազի փող": "Shiraz St.",
+  "Էստոնական փող.": "Estonakan St.",
+  "Ա.Միկոյան փող": "A.Mikoyan St.",
+  "Աղաբաբյան": "Agababyan",
+  "ԳԵՎՈՐԳՅԱՆ": "Gevorgyan",
+  "ԴԱՎԻԹԱՇԵՆ 1 թղմ.": "Davidashen 1st dist.",
+  "ԴԵՎԻԹԱՇԵՆ 2 թղմ.": "Davidashen 2nd dist.",
+  "ԴԱՎԻԹԱՇԵՆ 3 թղմ.": "Davidashen 3rd dist.",
+  "ԴԱՎԻԹԱՇԵՆ 4 թղմ.": "Davidashen 4th dist.",
+  "Փիրումյան": "Pirumyan",
+  "Սասնա Ծռեր փող.": "Sasna Tsrer St.",
+  "Տ. Պետրոսյան փող": "T. Petrosyan St.",
+  "Ագարոնյան փող": "Agatangeghos St.",
+  "Ասատրյան փող": "Aygedzor 1st lane",
+  "Վ. Վաղյան փող": "Aygedzor St.",
+  "ԳԱՍՏԵԼԼՈ 1 փող.": "Aygestan 9 str..",
+  "ԳԱՍՏԵԼԼՈ 2 փող.": "Argishti St.",
+  "ԳԱՍՏԵԼԼՈ 4 փող.": "Atenk St.",
+  "ԳԱՍՏԵԼԼՈ 6 փող.": "Vratsyan St.",
+  "Գոգոլի փող": "Heratsi St.",
+  "Դ. Անհաղթ փող.": "Glinka St.",
+  "Դրո փող.,": "Dzorap St.",
+  "Կ. Ուլնեցի 1 փկղ.": "E. Kochar St.",
+  "Կ. Ուլնեցի 2 փկղ.": "Zavaryan St.",
+  "Կ. Ուլնեցի 3 փկղ.": "Isakov ave..",
+  "Կ. Ուլնեցի փող": "Isralyan St.",
+  "Կամարակ 16 փող.": "Kilikia dist.",
+  "Քանաքեռ 14 փող.": "Kuznetsov St.",
+  "Քանաքեռ հիդրոէլեկտրակայան": "Leo st.",
+  "Մելիքյան փող": "Lusavorich St.",
+  "Ներսիսյան փակուղի": "M. Melkonyan St.",
+  "Ներսիսյան փող": "Mkkrtchyan St.",
+  "Պ. Սեւակի փող": "Maisyan St.",
+  "Ռայնիս փող..": "Myasnikyan ave.",
+  "Ռուբինյանցի փող": "Nar-Dos 1st lane",
+  "Սարկավագի փող": "Nar-Dos St.",
+  "Թբիլիսյան խճուղի": "Paronyans St.",
+  "Թբիլիսյան խճուղի 1 նրբ.": "Proshyan 1st lane",
+  "Շովրոյան փող.": "Proshyan St.",
+  "Էմինեսկուի փող": "T. Mets avenue",
+  "Ագաթանգեղոս փող": "Agatangeghos St.",
+  "Այգեձոր 1 նրբ.": "Aygedzor 1st lane",
+  "Այգեձոր փող": "Aygedzor St.",
+  "Այգեստան 9 փող.": "Aygestan 9 str..",
+  "Արգիշտի փող": "Argishti St.",
+  "Աթենք փող.": "Atenk St.",
+  "Վրացյան փող.": "Vratsyan St.",
+  "Հերիացի փող.": "Heratsi St.",
+  "Գլինկայի փող.": "Glinka St.",
+  "Ձորափի փող": "Dzorap St.",
+  "Ե. Քոչար փող": "E. Kochar St.",
+  "Զավարյան փող": "Zavaryan St.",
+  "Իսակովի պող.": "Isakov ave..",
+  "Իսրաելյան փող.": "Isralyan St.",
+  "Կիլիկիա թղմ.": "Kilikia dist.",
+  "Կուզնեցովի փող": "Kuznetsov St.",
+  "Լեո փող.": "Leo st.",
+  "Լուսավորիչ փող": "Lusavorich St.",
+  "Մ. Մելքոնյան փող.": "M. Melkonyan St.",
+  "Մկկրտչյան փող.": "Mkkrtchyan St.",
+  "Մայիսյան փող": "Maisyan St.",
+  "Մյասնիկյան պող.": "Myasnikyan ave.",
+  "Նար-Դոս 1 նրբ.": "Nar-Dos 1st lane",
+  "Նար-Դոս փող.": "Nar-Dos St.",
+  "Պարոնյանների փող.": "Paronyans St.",
+  "Պռոշյան 1 նրբ.": "Proshyan 1st lane",
+  "Պռոշյան փող.": "Proshyan St.",
+  "Տ. Մեծ պող.": "T. Mets avenue",
+  "Տ. Մեծ  նրբ.": "T. Mets lane.",
+  "Ֆրիկի փող..": "Frik St.",
+  "Խմելնիցկիի փող.": "Khmelnitsky St.",
+  "Խուրենացու 1 փկղ.": "Khorenatsi 1 imp..",
+  "Խորենացու փող": "Khorenatsi St.",
+  "Քրիստափորի փող": "Christaphor St.",
+  "Ծատուրյան փող": "Tsaturyan St.",
+  "Ծիծեռնակաբերդի խճուղի": "Tsitenakaberd highway",
+  "Չայկովսկու փող": "Tchaikovsky St.",
+  "Ա. Մանուկյան փող": "A. Manukyan St.",
+  "Աբովյան փկղ.": "ABOVIAN imp.",
+  "Աբովյան փող.": "Abovyan St.",
+  "Ազայան փող": "Aghayan St.",
+  "Ամիրյան փող": "Amiryan St.",
+  "Հանրապետության փող": "Hanrapetutyan St.",
+  "Անտառային փող": "Antarain St.",
+  "Արամի նրբ.": "Arami lane.",
+  "Արամի փող.": "Aram st.",
+  "Բաղրամյան 1 նրբ.": "Baghramyan 1st lane",
+  "Բաղրամյան 1 պող.": "Baghramyan 1 ave.",
+  "Բաղրամյան 1 փկղ.": "Baghramyan 1 imp.",
+  "Բաղրամյան 2 փկղ.": "Baghramyan 2 imp.",
+  "Բաղրամյան 3 նրբ.": "Baghramyan 3 lane.",
+  "Բաղրամյան պող.": "Baghramyan Ave.",
+  "Բայրոնի փող": "Byron St.",
+  "Բելյակովի փող": "Belyakov St.",
+  "Բուզանդի փող": "Buzand St.",
+  "Վ. Անտառային փող": "V. Antarain St.",
+  "Վարդանանց փող.": "Vardanants St.",
+  "Դեղատան փող": "Deghatan St.",
+  "Դեմիրճյան փող": "Demirtshyan St.",
+  "Ջրաշեն փող": "Djrashat St.",
+  "Ե. Կողբացի փող": "E. Koghbatsi St.",
+  "Եկմալյան փող.": "Ekmalyan St.",
+  "Զաքյան 1 նրբ.": "Zakyan 1st lane",
+  "Զաքյան փող": "Zakyan St.",
+  "Իսահակյան փող.": "Isahakyan St.",
+  "Կորյուն 1 նրբ.": "Koryun 1st lane",
+  "Կորյունի փող": "Koryun St.",
+  "Լ. Ազգալդյան": "L. Azgaldyan",
+  "Լ. Կամսար փող": "L. Kamsar St.",
+  "Լալայանց փող": "Lalayants St.",
+  "Մաշտոցի պողոտա": "Mashtots avenue",
+  "Մոսկովյան փող": "Moscovyan St.",
+  "Նալբանդան փող": "Nalbandyan St.",
+  "Փարպեցի փող": "Parpetsi St.",
+  "Պլեհանովի փող..": "Plekhanov St.",
+  "Պուշկին փող.": "Pushkin St.",
+  "Ս. Երևանցի փող.": "S. Erevantsii St.",
+  "Սարյան փող": "Saryan St.",
+  "Սախարովի փող.": "Sakharov St.",
+  "Սայաթ-Նովա պող.": "Sayat-Nova ave.",
+  "Հյուսիսային պող.": "North ave.",
+  "Սպենդիարով փող": "Spendiarov St.",
+  "Թամանյան փող": "Tamanyan St.",
+  "Տերյան փող": "Teryan St.",
+  "Տպագրիչների փող": "TPAGRICHERI St.",
+  "Թումանյան փող": "Tumanyan St.",
+  "Հ. Էմին փող.": "H. Emin str.",
+  "Խանջյան փող.": "Khanjyan St.",
+  "Չարենց փող.": "Charents St.",
+  "Մայիսի 9 փող.": "9th May St.",
+  "Արագածի փող": "Aragatsi St.",
+  "Արտաշիսյան փող.": "Artashisyan St.",
+  "Արշակունյաց փող.": "Arshakunyats St.",
+  "Բագրատունյաց 1 նրբ.": "Bagratunyats 1st lane",
+  "Բագրատունյաց փող.": "Bagratunyats St.",
+  "Վ. Շենգավիթ 2 փող.": "V. Shengavit 2 st.",
+  "Գ. Նժդեհ փող.": "G. Nzdeh St.",
+  "Եղբայրության փող.": "Eghpayrutian St.",
+  "Մանանդյան փող": "Manandyan St.",
+  "Մանթաշյան փող.": "Mantashyan St.",
+  "Ն. Շենգավիթ 11 փող.": "N. Shengavit 11 st.",
+  "Հովսեփյան փող": "Hovsepyan St.",
+  "Ս. Տարոնցի փող": "S. Taronts St.",
+  "Թադևոսյան նրբ.": "Tadevosyan lane.",
+  "Թադևոսյան փող": "Tadevosyan St.",
+  "Ֆրունզե փող.": "Frunze St.",
+  "Չեխովի փող": "Chekhov St.",
+  "Շարուրի փող.": "Sharur St.",
+  "Շիրակի փող": "Shirak St.",
+  "Ավանեսովի փող": "Avanesov St.",
+  "Արցախի պող.": "Artsakh ave.",
+  "Արցախի փող": "Artsakh St.",
+  "Ատոյան պող.": "Atoyan ave.",
+  "Վարդաշեն": "Vardashen",
+  "Գաջեգործների փող.": "Gadzhegortsneri St.",
+  "Դ. Սասունցի փող.": "D. Sasuntsi St.",
+  "Լիսինյան փող.": "Lisinyan St.",
+  "Մուրացան փող": "Muratsan St.",
+  "Ն. Արեշի փող": "N. Aresh St.",
+  "Նուբարաշեն": "Nubarashen",
+  "Ռոստովյան փող": "Rostovyan St.",
+  "Սարի թաղ": "Sari tagh.",
+  "Խ. Դոնի փող": "Kh. Don St.",
+  "Էրեբունի փող": "Erebuni St.",
+  "Ն. Մարաշի թղմ.": "N. Marash dist.",
+  "Արմենակյան փող": "Armenakyan St.",
+  "Արմենակյան 1 նրբ.": "Armenakyan 1st lane",
+  "Բ. Մուրադյան փող": "B. Muradyan St.",
+  "Բագրևանդ փող.": "Bagrevand St.",
+  "Բաղյան 1 նրբ.": "Baghyan 1st lane",
+  "Բաղյան 2 նրբ.": "Baghyan 2nd  lane",
+  "Բաղյան փող": "Baghyan St.",
+  "Բակունց 2 նրբ.": "Bakunts 2nd lane",
+  "Բորյան փող.": "Bakunts St.",
+  "Գայի պող.": "Boryan St.",
+  "Գալշոյան փող": "Gai avenue",
+  "Գյուլիքեխվյան նրբ": "Galshoyan St.",
+  "Գյուլիքեխվյան փող..": "Gyulikekhvyan lane.",
+  "Գյուրջյան փող": "Gyulikekhvyan St.",
+  "Դ. Մալյան նրբ.": "Gyurjyan St.",
+  "Դ. Մալյան փող": "D. Malyan lane.",
+  "Քոչարյան փող..": "D. Malyan St.",
+  "Լվովյան նրբ.": "Kocharyan St.",
+  "Լվովյան փող": "Lvovian lane.",
+  "Լյուքսեմբուրգ 1 նրբ.": "Lvovyan St.",
+  "Լյուքսեմբուրգի փող.": "Luxembourg 1st lane",
+  "Մառի փող.": "Luxembourg St.",
+  "Մառի նրբ.": "Mar St.",
+  "Միկոյան փող": "Mar lane.",
+  "Մոլդովական փող.": "Mikoyan St.",
+  "Նանսենի փող": "Moldovakan St.",
+  "Հովհաննիսյան փող": "Nansen St.",
+  "Սաֆարյան փող": "Hovhannisyan St.",
+  "Ստեփանյան փող": "Safaryan St.",
+  "Թոթովենց փող": "Stepanyan St.",
+  "Շոփրոնի 2 նրբ.": "Totovents St.",
+  "Շոփրոնի 3 նրբ.": "Shopron 2nd lane",
+  "Շոփրոն փող.": "Shopron 3rd lane.",
+  "7-րդ Մասիվ": "7th Masiv.",
+  "8-րդ Մասիվ": "8th Masiv.",
+  "Վիլնյուսի փող": "Vilnyus St.",
+  "Ջրվեժ Բանավան": "Jrvezh Banavan",
+  "Ջրվեժ Մայակ": "Jrvezh Mayak",
+  "Կարախանյան փող": "Karakhanyan St.",
+  "Մինսկի փող": "Minsk St.",
+  "Ու. Ավետիսյան փող": "U. Avetisyan St.",
+  "Անդրանիկի փող": "Andranik St.",
+  "ԱՐ. Մանուկյան փող": "Ar. Manukyan St.",
+  "Արարատյան 1-ին Մ.": "Araratyan 1st M.",
+  "Բաբաջանյան փող.": "Babajanyan St.",
+  "Իսակովի պող.": "Isakov Ave.",
+  "Կուրղինյան փող.": "Kurghinyan St.",
+  "Միքայելյան փող.": "Mikaelyan St.",
+  "Օհանովի փող": "Ohanov St.",
+  "Ռ. Մելիքյան փող": "R. Melikyan St.",
+  "Րաֆֆու փող": "Raffi St.",
+  "Սվաճյան փող": "Svachyan St.",
+  "Սեբաստիա փող.": "Sebastia St.",
+  "Տիչինա փող..": "Tichina St.",
+  "Ծերենց փող.": "Tserents St.",
+  "Շահումյան 8 փող.": "Shaumyan 8 st.",
+  "Շերամի փող.": "Sheram st.",
+  "Հողատարածք Վաճառք": "Land for sale",
+  "Բնակարան Վաճառք": "Apartment for sale",
+  "Ստալինկա": "Stalinka",
+  "Քարե":"Stone",
+  "Պոստ Խրյուշովկա": "Post Khrushchevka",
+  "Խրյուշովկա":"Khrushchevka",
+  "Բարձրահարկ": "High floor",
+  "Խոշոր Պանելային":"Large panel",
+  "Կասետաին": "To the cassette",
+  "վերանորոգված դիզաիներական ոճով":"renovated in designer style",
+  "հին վերանորոգում": "old renovation",
+  "զրոական":"zero",
+  "վերանորոգում 10 ավել": "renovation 10y more",
+  "վերանորոգում 5-10":"renovation 5-10",
+  "վերանորոգում 2-5": "renovation 2-5",
+  "վերանորոգված 2 տարի":"renovation 2y more",
+  "վերանորոգված չբնակեցված": "renovated uninhabited",
+  "Կոմերցիոն Վաճառք": "Commercial space for sale",
+  "Առանձնատուն Վաճառք": "Private house for sale",
+  "Վաճառք": "For Sale",
+  "Վարձ": "For Rent",
+  "Օրավարձ": "Daily"
 }
