--- a/src/Components/Translations/hy.json
+++ b/src/Components/Translations/hy.json
@@ -23,7 +23,7 @@
   "Նորք Մարաշ": "Նորք-Մարաշ",
   "Շենգավիթ": "Շենգավիթ",
   "Նուբարաշեն": "Նուբարաշեն",
-  "Ավան":  "Ավան",
+  "Ավան": "Ավան",
   "Rooms": "Սենյակ",
   "Area": "Մակերես",
   "Price": "Արժեք",
@@ -64,8 +64,8 @@
   "No": "Ոչ",
   "Rent_Page": "Վարձակալություն",
   "Contact_Us": "Կապնվել մեզ հետ",
-  "Contact_Summary" : "Մենք անշարժ գույքի մասնագետների  թիմ ենք, ովքեր ցանկանում են օգնել ձեզ գտնել ձեր երազած տունը կամ ներդրումային գույքը:Կապվեք մեզ հետ այսօր անհատականացված ծառայության և փորձագիտական խորհրդատվության համար.",
-  "Telephone": "Հեռաղոսահամար" ,
+  "Contact_Summary": "Մենք անշարժ գույքի մասնագետների  թիմ ենք, ովքեր ցանկանում են օգնել ձեզ գտնել ձեր երազած տունը կամ ներդրումային գույքը:Կապվեք մեզ հետ այսօր անհատականացված ծառայության և փորձագիտական խորհրդատվության համար.",
+  "Telephone": "Հեռախոսահամար",
   "Address": "Հասցե",
   "Our_Location": "Մեր հասցեն",
   "Submit": "Հաստատել",
@@ -75,40 +75,385 @@
   "Build_type": "Տեսակը",
   "Condition": "Վիճակ",
   "Total_space": "Մակերես",
-  "M":"Մ",
+  "M": "Մ",
   "Contact_Me": "Կապնվել",
-  "Your_Number":"Ձեր հեռախոսահամարը",
-  "FACILITIES":"Կոմունալ",
-  "More_Information":"Այլ Տեղեկություն",
-  "Gas":"Գազ",
-  "Internet":"Համացանց",
-  "Electricity":"Էլեկտրոէներգիա",
-  "Water":"Ջուր",
-  "Heating_System":"Ջեռուցման համակարգ",
-  "Conditioner":"Օդորակիչ",
-  "Sunny":"Արևկողմ",
-  "Beautiful_view":"Գեղեցիկ տեսարան",
-  "Fireplace":"Բուխարի",
-  "Elevator":"Վերելակ",
-  "Storage_room":"Խորդանոց",
-  "Roadside":"Ճանապարհամերձ",
-  "Sauna":"Շոգեբաղնիք",
-  "Kitchen_furniture":"Խոհանոցաին կահույք",
-  "Parking":"Կայանատեղի",
-  "Open_balcony":"Բաց պատշգամբ",
-  "Basement":"Նկուղ",
-  "High_first_floor":"Բարձր առաջին հարկ",
-  "Near_the_bus_stop":"Կանգառին մոտ",
-  "Park":"Զբոսայգի",
-  "Furniture":"Կահույք",
-  "Security":"Անվտանգություն",
-  "Loggia":"Լոջա",
-  "Attic":"Ձեղնահարկ",
-  "Heated_loor":"Տաքացվոզ հատակ",
-  "Metro":"Մետրո",
-  "Fenced":"Պարսպապատ",
-  "Technics":"Տեխնեիկա",
+  "Your_Number": "Ձեր հեռախոսահամարը",
+  "FACILITIES": "Կոմունալ",
+  "More_Information": "Այլ Տեղեկություն",
+  "Gas": "Գազ",
+  "Internet": "Համացանց",
+  "Electricity": "Էլեկտրոէներգիա",
+  "Water": "Ջուր",
+  "Heating_System": "Ջեռուցման համակարգ",
+  "Conditioner": "Օդորակիչ",
+  "Sunny": "Արևկողմ",
+  "Beautiful_view": "Գեղեցիկ տեսարան",
+  "Fireplace": "Բուխարի",
+  "Elevator": "Վերելակ",
+  "Storage_room": "Խորդանոց",
+  "Roadside": "Ճանապարհամերձ",
+  "Sauna": "Շոգեբաղնիք",
+  "Kitchen_furniture": "Խոհանոցաին կահույք",
+  "Parking": "Կայանատեղի",
+  "Open_balcony": "Բաց պատշգամբ",
+  "Basement": "Նկուղ",
+  "High_first_floor": "Բարձր առաջին հարկ",
+  "Near_the_bus_stop": "Կանգառին մոտ",
+  "Park": "Զբոսայգի",
+  "Furniture": "Կահույք",
+  "Security": "Անվտանգություն",
+  "Loggia": "Լոջա",
+  "Attic": "Ձեղնահարկ",
+  "Heated_loor": "Տաքացվոզ հատակ",
+  "Metro": "Մետրո",
+  "Fenced": "Պարսպապատ",
+  "Technics": "Տեխնեիկա",
   "Lift": "Վերելակ",
   "Daily_Page": "Օրավարձ",
-  "Newly_Built": "Նորակառույց"
+  "Newly_Built": "Նորակառույց",
+  "Ա. Սերոբ փող.": "Ա. Սերոբ փող.",
+  "Ա. Տիգրանյան փող.": "Ա. Տիգրանյան փող.",
+  "Ավետիսյան փող.": "Ավետիսյան փող.",
+  "Ադոնց փող.": "Ադոնց փող.",
+  "Ազատության 2-րդ նրբանցք": "Ազատության 2-րդ նրբանցք",
+  "Ազատության պող.": "Ազատության պող.",
+  "Հակոբյան փող": "Հակոբյան փող",
+  "Արաբկիր 17 փող.": "Արաբկիր 17 փող.",
+  "Արաբկիր 19 փ.": "Արաբկիր 19 փ.",
+  "Արաբկիր 21 փող.": "Արաբկիր 21 փող.",
+  "Արաբկիր 25 փող..": "Արաբկիր 25 փող..",
+  "Արաբկիր 27 փող.": "Արաբկիր 27 փող.",
+  "Արաբկիր 37 փող.": "Արաբկիր 37 փող.",
+  "Արաբկիր 39 փող.": "Արաբկիր 39 փող.",
+  "Արաբկիր 43 փող.": "Արաբկիր 43 փող.",
+  "Արաբկիր 51 փող.": "Արաբկիր 51 փող.",
+  "Բաբայան փող": "Բաբայան փող",
+  "Բակունց փող.": "Բակունց փող.",
+  "Բարբուսի փող": "Բարբուսի փող",
+  "Վ. Դավթյան փող": "Վ. Դավթյան փող",
+  "Վաղարշյան փող.": "Վաղարշյան փող.",
+  "Վրացական 4րդ նրբ.": "Վրացական 4րդ նրբ.",
+  "Վրացական փող.": "Վրացական փող.",
+  "Գ. Արծրունի փող": "Գ. Արծրունի փող",
+  "Քոչարի փող": "Քոչարի փող",
+  "Վ. Համբարձումյան փող": "Վ. Համբարձումյան փող",
+  "Գործկոմի փող.": "Գործկոմի փող.",
+  "Գրիբոյեդով 1 նրբ.": "Գրիբոյեդով 1 նրբ.",
+  "Գրիբոյեդովի փող": "Գրիբոյեդովի փող",
+  "Գուլական փող": "Գուլական փող",
+  "Գյուլբենկյան փող.": "Գյուլբենկյան փող.",
+  "Երզնկյան փող.": "Երզնկյան փող.",
+  "Զարյան փող": "Զարյան փող",
+  "Կապանցյան փող": "Կապանցյան փող",
+  "Կասյան փող": "Կասյան փող",
+  "Քեռու փող": "Քեռու փող",
+  "Կիևյան 1 նրբ.": "Կիևյան 1 նրբ.",
+  "Կիևյան փող": "Կիևյան փող",
+  "Կոմիտաս պող.": "Կոմիտաս պող.",
+  "Մալխասյան փող": "Մալխասյան փող",
+  "Մամիկոնյանց նրբ.": "Մամիկոնյանց նրբ.",
+  "Մամիկոնյանց փող": "Մամիկոնյանց փող",
+  "Ն. Տիգրանյան փկղ.": "Ն. Տիգրանյան փկղ.",
+  "Ն. Դուման փող": "Ն. Դուման փող",
+  "Ն. Տիգրանան փող": "Ն. Տիգրանան փող",
+  "Հ. Արղության փող": "Հ. Արղության փող",
+  "Հ. Էմին փող": "Հ. Էմին փող",
+  "Օրբելի փող": "Օրբելի փող",
+  "Փափազյան փող": "Փափազյան փող",
+  "Ռիգայի փող": "Ռիգայի փող",
+  "Ս. Սաքո փող": "Ս. Սաքո փող",
+  "Սոսե փող.": "Սոսե փող.",
+  "Սունդուկյան փող": "Սունդուկյան փող",
+  "Սուրենսանց փող": "Սուրենսանց փող",
+  "Տոլբուխինա փող": "Տոլբուխինա փող",
+  "Խաչատրյան 1 նրբ.": "Խաչատրյան 1 նրբ.",
+  "Խաչատրյան փող.": "Խաչատրյան փող.",
+  "Շահսուվարյան փող.": "Շահսուվարյան փող.",
+  "Շիրվանզադե փող": "Շիրվանզադե փող",
+  "Ավան Առինջ 1 միկր.": "Ավան Առինջ 1 միկր.",
+  "Ավան Առինջ 2 միկր.": "Ավան Առինջ 2 միկր.",
+  "Ավան Առինջ Վ. Տերյան_ 1 փող.": "Ավան Առինջ Վ. Տերյան_ 1 փող.",
+  "Ավան Վարուժան թղմ.": "Ավան Վարուժան թղմ.",
+  "Ավան Դուրյան": "Ավան Դուրյան",
+  "Ավան Իսահակյան թաղ. ": "Ավան Իսահակյան թաղ. ",
+  "Ավան Քուչակ թաղ.": "Ավան Քուչակ թաղ.",
+  "Ավան Նարեկացի թաղ.": "Ավան Նարեկացի թաղ.",
+  "Ավան Օգանեսյան թաղ.": "Ավան Օգանեսյան թաղ.",
+  "Ավան Սայաթ Նովա թաղ.": "Ավան Սայաթ Նովա թաղ.",
+  "Ավան Թումանյան թաղ.": "Ավան Թումանյան թաղ.",
+  "Ավան Չարենց թաղ.": "Ավան Չարենց թաղ.",
+  "Առինջ Աբովյան թաղ.": "Առինջ Աբովյան թաղ.",
+  "Առինջ Մ. Մկրտչյան": "Առինջ Մ. Մկրտչյան",
+  "Առինջ Պ. Սեւակ թաղ.": "Առինջ Պ. Սեւակ թաղ.",
+  "Աճառյան փող": "Աճառյան փող",
+  "Խուդյակովի փող": "Խուդյակովի փող",
+  "Ծարավ Աղբյուր": "Ծարավ Աղբյուր",
+  "16-րդ Թղմ.": "16-րդ Թղմ.",
+  "Ա. Սարգսյան փող.": "Ա. Սարգսյան փող.",
+  "Աբելյան փող.": "Աբելյան փող.",
+  "Հալաբյան փող": "Հալաբյան փող",
+  "Արզումանյան փող": "Արզումանյան փող",
+  "Բաշինջաղյան 1 նրբ.": "Բաշինջաղյան 1 նրբ.",
+  "Բաշինջաղյան 1 փող.": "Բաշինջաղյան 1 փող.",
+  "Բաշինջաղյան 2 նրբ.": "Բաշինջաղյան 2 նրբ.",
+  "Բաշինջաղյան փող.": "Բաշինջաղյան փող.",
+  "Է. Ալիխանյան փող.": "Է. Ալիխանյան փող.",
+  "Լենինականի փող.": "Լենինականի փող.",
+  "Լենինգրադյան": "Լենինգրադյան",
+  "Մազմանյան փող": "Մազմանյան փող",
+  "Մարգարյան 1 նրբ.": "Մարգարյան 1 նրբ.",
+  "Մարգարյան 2 նրբ.": "Մարգարյան 2 նրբ.",
+  "Մարգարյան նրբ.": "Մարգարյան նրբ.",
+  "Մարգարյան փող.": "Մարգարյան փող.",
+  "Մելքումովի փող": "Մելքումովի փող",
+  "Նազարբեկյան փող.": "Նազարբեկյան փող.",
+  "Նորաշեն թղմ.": "Նորաշեն թղմ.",
+  "Սիսակյան փող": "Սիսակյան փող",
+  "Ֆուչիկ 1 նրբ": "Ֆուչիկ 1 նրբ",
+  "Ֆուչիկի փող": "Ֆուչիկի փող",
+  "Շինարարների փող.": "Շինարարների փող.",
+  "Շիրազի փող": "Շիրազի փող",
+  "Էստոնական փող.": "Էստոնական փող.",
+  "Ա.Միկոյան փող": "Ա.Միկոյան փող",
+  "Աղաբաբյան": "Աղաբաբյան",
+  "ԳԵՎՈՐԳՅԱՆ": "ԳԵՎՈՐԳՅԱՆ",
+  "ԴԱՎԻԹԱՇԵՆ 1 թղմ.": "ԴԱՎԻԹԱՇԵՆ 1 թղմ.",
+  "ԴԵՎԻԹԱՇԵՆ 2 թղմ.": "ԴԵՎԻԹԱՇԵՆ 2 թղմ.",
+  "ԴԱՎԻԹԱՇԵՆ 3 թղմ.": "ԴԱՎԻԹԱՇԵՆ 3 թղմ.",
+  "ԴԱՎԻԹԱՇԵՆ 4 թղմ.": "ԴԱՎԻԹԱՇԵՆ 4 թղմ.",
+  "Փիրումյան": "Փիրումյան",
+  "Սասնա Ծռեր փող.": "Սասնա Ծռեր փող.",
+  "Տ. Պետրոսյան փող": "Տ. Պետրոսյան փող",
+  "Ագարոնյան փող": "Ագարոնյան փող",
+  "Ասատրյան փող": "Ասատրյան փող",
+  "Վ. Վաղյան փող": "Վ. Վաղյան փող",
+  "ԳԱՍՏԵԼԼՈ 1 փող.": "ԳԱՍՏԵԼԼՈ 1 փող.",
+  "ԳԱՍՏԵԼԼՈ 2 փող.": "ԳԱՍՏԵԼԼՈ 2 փող.",
+  "ԳԱՍՏԵԼԼՈ 4 փող.": "ԳԱՍՏԵԼԼՈ 4 փող.",
+  "ԳԱՍՏԵԼԼՈ 6 փող.": "ԳԱՍՏԵԼԼՈ 6 փող.",
+  "Գոգոլի փող": "Գոգոլի փող",
+  "Դ. Անհաղթ փող.": "Դ. Անհաղթ փող.",
+  "Դրո փող.,": "Դրո փող.,",
+  "Կ. Ուլնեցի 1 փկղ.": "Կ. Ուլնեցի 1 փկղ.",
+  "Կ. Ուլնեցի 2 փկղ.": "Կ. Ուլնեցի 2 փկղ.",
+  "Կ. Ուլնեցի 3 փկղ.": "Կ. Ուլնեցի 3 փկղ.",
+  "Կ. Ուլնեցի փող": "Կ. Ուլնեցի փող",
+  "Կամարակ 16 փող.": "Կամարակ 16 փող.",
+  "Քանաքեռ 14 փող.": "Քանաքեռ 14 փող.",
+  "Քանաքեռ հիդրոէլեկտրակայան": "Քանաքեռ հիդրոէլեկտրակայան",
+  "Մելիքյան փող": "Մելիքյան փող",
+  "Ներսիսյան փակուղի": "Ներսիսյան փակուղի",
+  "Ներսիսյան փող": "Ներսիսյան փող",
+  "Պ. Սեւակի փող": "Պ. Սեւակի փող",
+  "Ռայնիս փող..": "Ռայնիս փող..",
+  "Ռուբինյանցի փող": "Ռուբինյանցի փող",
+  "Սարկավագի փող": "Սարկավագի փող",
+  "Թբիլիսյան խճուղի": "Թբիլիսյան խճուղի",
+  "Թբիլիսյան խճուղի 1 նրբ.": "Թբիլիսյան խճուղի 1 նրբ.",
+  "Շովրոյան փող.": "Շովրոյան փող.",
+  "Էմինեսկուի փող": "Էմինեսկուի փող",
+  "Ագաթանգեղոս փող": "Ագաթանգեղոս փող",
+  "Այգեձոր 1 նրբ.": "Այգեձոր 1 նրբ.",
+  "Այգեձոր փող": "Այգեձոր փող",
+  "Այգեստան 9 փող.": "Այգեստան 9 փող.",
+  "Արգիշտի փող": "Արգիշտի փող",
+  "Աթենք փող.": "Աթենք փող.",
+  "Վրացյան փող.": "Վրացյան փող.",
+  "Հերիացի փող.": "Հերիացի փող.",
+  "Գլինկայի փող.": "Գլինկայի փող.",
+  "Ձորափի փող": "Ձորափի փող",
+  "Ե. Քոչար փող": "Ե. Քոչար փող",
+  "Զավարյան փող": "Զավարյան փող",
+  "Իսակովի պող.": "Իսակովի պող.",
+  "Իսրաելյան փող.": "Իսրաելյան փող.",
+  "Կիլիկիա թղմ.": "Կիլիկիա թղմ.",
+  "Կուզնեցովի փող": "Կուզնեցովի փող",
+  "Լեո փող.": "Լեո փող.",
+  "Լուսավորիչ փող": "Լուսավորիչ փող",
+  "Մ. Մելքոնյան փող.": "Մ. Մելքոնյան փող.",
+  "Մկկրտչյան փող.": "Մկկրտչյան փող.",
+  "Մայիսյան փող": "Մայիսյան փող",
+  "Մյասնիկյան պող.": "Մյասնիկյան պող.",
+  "Նար-Դոս 1 նրբ.": "Նար-Դոս 1 նրբ.",
+  "Նար-Դոս փող.": "Նար-Դոս փող.",
+  "Պարոնյանների փող.": "Պարոնյանների փող.",
+  "Պռոշյան 1 նրբ.": "Պռոշյան 1 նրբ.",
+  "Պռոշյան փող.": "Պռոշյան փող.",
+  "Տ. Մեծ պող.": "Տ. Մեծ պող.",
+  "Տ. Մեծ  նրբ.": "Տ. Մեծ  նրբ.",
+  "Ֆրիկի փող..": "Ֆրիկի փող..",
+  "Խմելնիցկիի փող.": "Խմելնիցկիի փող.",
+  "Խուրենացու 1 փկղ.": "Խուրենացու 1 փկղ.",
+  "Խորենացու փող": "Խորենացու փող",
+  "Քրիստափորի փող": "Քրիստափորի փող",
+  "Ծատուրյան փող": "Ծատուրյան փող",
+  "Ծիծեռնակաբերդի խճուղի": "Ծիծեռնակաբերդի խճուղի",
+  "Չայկովսկու փող": "Չայկովսկու փող",
+  "Ա. Մանուկյան փող": "Ա. Մանուկյան փող",
+  "Աբովյան փկղ.": "Աբովյան փկղ.",
+  "Աբովյան փող.": "Աբովյան փող.",
+  "Ազայան փող": "Ազայան փող",
+  "Ամիրյան փող": "Ամիրյան փող",
+  "Հանրապետության փող": "Հանրապետության փող",
+  "Անտառային փող": "Անտառային փող",
+  "Արամի նրբ.": "Արամի նրբ.",
+  "Արամի փող.": "Արամի փող.",
+  "Բաղրամյան 1 նրբ.": "Բաղրամյան 1 նրբ.",
+  "Բաղրամյան 1 պող.": "Բաղրամյան 1 պող.",
+  "Բաղրամյան 1 փկղ.": "Բաղրամյան 1 փկղ.",
+  "Բաղրամյան 2 փկղ.": "Բաղրամյան 2 փկղ.",
+  "Բաղրամյան 3 նրբ.": "Բաղրամյան 3 նրբ.",
+  "Բաղրամյան պող.": "Բաղրամյան պող.",
+  "Բայրոնի փող": "Բայրոնի փող",
+  "Բելյակովի փող": "Բելյակովի փող",
+  "Բուզանդի փող": "Բուզանդի փող",
+  "Վ. Անտառային փող": "Վ. Անտառային փող",
+  "Վարդանանց փող.": "Վարդանանց փող.",
+  "Դեղատան փող": "Դեղատան փող",
+  "Դեմիրճյան փող": "Դեմիրճյան փող",
+  "Ջրաշեն փող": "Ջրաշեն փող",
+  "Ե. Կողբացի փող": "Ե. Կողբացի փող",
+  "Եկմալյան փող.": "Եկմալյան փող.",
+  "Զաքյան 1 նրբ.": "Զաքյան 1 նրբ.",
+  "Զաքյան փող": "Զաքյան փող",
+  "Իսահակյան փող.": "Իսահակյան փող.",
+  "Կորյուն 1 նրբ.": "Կորյուն 1 նրբ.",
+  "Կորյունի փող": "Կորյունի փող",
+  "Լ. Ազգալդյան": "Լ. Ազգալդյան",
+  "Լ. Կամսար փող": "Լ. Կամսար փող",
+  "Լալայանց փող": "Լալայանց փող",
+  "Մաշտոցի պողոտա": "Մաշտոցի պողոտա",
+  "Մոսկովյան փող": "Մոսկովյան փող",
+  "Նալբանդան փող": "Նալբանդան փող",
+  "Փարպեցի փող": "Փարպեցի փող",
+  "Պլեհանովի փող..": "Պլեհանովի փող..",
+  "Պուշկին փող.": "Պուշկին փող.",
+  "Ս. Երևանցի փող.": "Ս. Երևանցի փող.",
+  "Սարյան փող": "Սարյան փող",
+  "Սախարովի փող.": "Սախարովի փող.",
+  "Սայաթ-Նովա պող.": "Սայաթ-Նովա պող.",
+  "Հյուսիսային պող.": "Հյուսիսային պող.",
+  "Սպենդիարով փող": "Սպենդիարով փող",
+  "Թամանյան փող": "Թամանյան փող",
+  "Տերյան փող": "Տերյան փող",
+  "Տպագրիչների փող": "Տպագրիչների փող",
+  "Թումանյան փող": "Թումանյան փող",
+  "Հ. Էմին փող.": "Հ. Էմին փող.",
+  "Խանջյան փող.": "Խանջյան փող.",
+  "Չարենց փող.": "Չարենց փող.",
+  "Մայիսի 9 փող.": "Մայիսի 9 փող.",
+  "Արագածի փող": "Արագածի փող",
+  "Արտաշիսյան փող.": "Արտաշիսյան փող.",
+  "Արշակունյաց փող.": "Արշակունյաց փող.",
+  "Բագրատունյաց 1 նրբ.": "Բագրատունյաց 1 նրբ.",
+  "Բագրատունյաց փող.": "Բագրատունյաց փող.",
+  "Վ. Շենգավիթ 2 փող.": "Վ. Շենգավիթ 2 փող.",
+  "Գ. Նժդեհ փող.": "Վ. Շենգավիթ 2 փող.",
+  "Եղբայրության փող.": "Եղբայրության փող.",
+  "Մանանդյան փող": "Մանանդյան փող",
+  "Մանթաշյան փող.": "Մանթաշյան փող.",
+  "Ն. Շենգավիթ 11 փող.": "Ն. Շենգավիթ 11 փող.",
+  "Հովսեփյան փող": "Հովսեփյան փող",
+  "Ս. Տարոնցի փող": "Ս. Տարոնցի փող",
+  "Թադևոսյան նրբ.": "Թադևոսյան նրբ.",
+  "Թադևոսյան փող": "Թադևոսյան փող",
+  "Ֆրունզե փող.": "Ֆրունզե փող.",
+  "Չեխովի փող": "Չեխովի փող",
+  "Շարուրի փող.": "Շարուրի փող.",
+  "Շիրակի փող": "Շիրակի փող",
+  "Ավանեսովի փող": "Ավանեսովի փող",
+  "Արցախի պող.": "Արցախի պող.",
+  "Արցախի փող": "Արցախի փող",
+  "Ատոյան պող.": "Ատոյան պող.",
+  "Վարդաշեն": "Վարդաշեն",
+  "Գաջեգործների փող.": "Գաջեգործների փող.",
+  "Դ. Սասունցի փող.": "Դ. Սասունցի փող.",
+  "Լիսինյան փող.": "Լիսինյան փող.",
+  "Մուրացան փող": "Մուրացան փող",
+  "Ն. Արեշի փող": "Ն. Արեշի փող",
+  "Նուբարաշեն": "Նուբարաշեն",
+  "Ռոստովյան փող": "Ռոստովյան փող",
+  "Սարի թաղ": "Սարի թաղ",
+  "Խ. Դոնի փող": "Խ. Դոնի փող",
+  "Էրեբունի փող": "Էրեբունի փող",
+  "Ն. Մարաշի թղմ.": "Ն. Մարաշի թղմ.",
+  "Արմենակյան փող": "Արմենակյան փող",
+  "Արմենակյան 1 նրբ.": "Արմենակյան 1 նրբ.",
+  "Բ. Մուրադյան փող": "Բ. Մուրադյան փող",
+  "Բագրևանդ փող.": "Բագրևանդ փող.",
+  "Բաղյան 1 նրբ.": "Բաղյան 1 նրբ.",
+  "Բաղյան 2 նրբ.": "Բաղյան 2 նրբ.",
+  "Բաղյան փող": "Բաղյան փող",
+  "Բակունց 2 նրբ.": "Բակունց 2 նրբ.",
+  "Բորյան փող.": "Բորյան փող.",
+  "Գայի պող.": "Գայի պող.",
+  "Գալշոյան փող": "Գալշոյան փող",
+  "Գյուլիքեխվյան նրբ": "Գյուլիքեխվյան նրբ",
+  "Գյուլիքեխվյան փող..": "Գյուլիքեխվյան փող..",
+  "Գյուրջյան փող": "Գյուրջյան փող",
+  "Դ. Մալյան նրբ.": "Դ. Մալյան նրբ.",
+  "Դ. Մալյան փող": "Դ. Մալյան փող",
+  "Քոչարյան փող..": "Քոչարյան փող..",
+  "Լվովյան նրբ.": "Լվովյան նրբ.",
+  "Լվովյան փող": "Լվովյան փող",
+  "Լյուքսեմբուրգ 1 նրբ.": "Լյուքսեմբուրգ 1 նրբ.",
+  "Լյուքսեմբուրգի փող.": "Լյուքսեմբուրգի փող.",
+  "Մառի փող.": "Մառի փող.",
+  "Մառի նրբ.": "Մառի նրբ.",
+  "Միկոյան փող": "Միկոյան փող",
+  "Մոլդովական փող.": "Մոլդովական փող.",
+  "Նանսենի փող": "Նանսենի փող",
+  "Հովհաննիսյան փող": "Հովհաննիսյան փող",
+  "Սաֆարյան փող": "Սաֆարյան փող",
+  "Ստեփանյան փող": "Ստեփանյան փող",
+  "Թոթովենց փող": "Թոթովենց փող",
+  "Շոփրոնի 2 նրբ.": "Շոփրոնի 2 նրբ.",
+  "Շոփրոնի 3 նրբ.": "Շոփրոնի 3 նրբ.",
+  "Շոփրոն փող.": "Շոփրոն փող.",
+  "7-րդ Մասիվ": "7-րդ Մասիվ",
+  "8-րդ Մասիվ": "8-րդ Մասիվ",
+  "Վիլնյուսի փող": "Վիլնյուսի փող",
+  "Ջրվեժ Բանավան": "Ջրվեժ Բանավան",
+  "Ջրվեժ Մայակ": "Ջրվեժ Մայակ",
+  "Կարախանյան փող": "Կարախանյան փող",
+  "Մինսկի փող": "Մինսկի փող",
+  "Ու. Ավետիսյան փող": "Ու. Ավետիսյան փող",
+  "Անդրանիկի փող": "Անդրանիկի փող",
+  "ԱՐ. Մանուկյան փող": "ԱՐ. Մանուկյան փող",
+  "Արարատյան 1-ին Մ.": "Արարատյան 1-ին Մ.",
+  "Բաբաջանյան փող.": "Բաբաջանյան փող.",
+  "Իսակովի պող.": "Իսակովի պող.",
+  "Կուրղինյան փող.": "Կուրղինյան փող.",
+  "Միքայելյան փող.": "Միքայելյան փող.",
+  "Օհանովի փող": "Օհանովի փող",
+  "Ռ. Մելիքյան փող": "Ռ. Մելիքյան փող",
+  "Րաֆֆու փող": "Րաֆֆու փող",
+  "Սվաճյան փող": "Սվաճյան փող",
+  "Սեբաստիա փող.": "Սեբաստիա փող.",
+  "Տիչինա փող..": "Տիչինա փող..",
+  "Ծերենց փող.": "Ծերենց փող.",
+  "Շահումյան 8 փող.": "Շահումյան 8 փող.",
+  "Շերամի փող.": "Շերամի փող.",
+  "Հողատարածք Վաճառք": "Վաճառվում է հողատարածք",
+  "Բնակարան Վաճառք": "Վաճառվում է բնակարան",
+  "Ստալինկա": "Ստալինկա",
+  "Քարե":"Քարե",
+  "Պոստ Խրյուշովկա": "Պոստ Խրյուշովկա",
+  "Խրյուշովկա":"Խրյուշովկա",
+  "Բարձրահարկ": "Բարձրահարկ",
+  "Խոշոր Պանելային":"Խոշոր Պանելային",
+  "Կասետաին": "Կասետաին",
+  "վերանորոգված դիզաիներական ոճով":"վերանորոգված դիզաիներական ոճով",
+  "հին վերանորոգում": "հին վերանորոգում",
+  "զրոական":"զրոական",
+  "վերանորոգում 10 ավել": "վերանորոգում 10 ավել",
+  "վերանորոգում 5-10":"վերանորոգում 5-10",
+  "վերանորոգում 2-5": "վերանորոգում 2-5",
+  "վերանորոգված 2 տարի":"վերանորոգված 2 տարի",
+  "վերանորոգված չբնակեցված": "վերանորոգված չբնակեցված",
+  "Կոմերցիոն Վաճառք": "Վաճառվում է կոմերցիոն տարածք",
+  "Առանձնատուն Վաճառք": "Վաճառվում է առանձնատուն",
+  "Վաճառք": "Վաճառվում է",
+  "Վարձ": "Վարձով",
+  "Օրավարձ": "Օրավարձ"
 }
