--- a/src/Components/Translations/ru.json
+++ b/src/Components/Translations/ru.json
@@ -9,7 +9,7 @@
   "Բնակարան": "Квартира",
   "Առանձնատուն": "Дом",
   "Կոմերցիոն": "Коммерческая",
-  "Հողատարածք":"Земля",
+  "Հողատարածք": "Земля",
   "Place": "Расположение",
   "Երևան": "Ереван",
   "Կենտրոն": "Кентрон",
@@ -23,7 +23,7 @@
   "Նորք Մարաշ": "Норк Мараш",
   "Շենգավիթ": "Шенгавит",
   "Նուբարաշեն": "Нубарашен",
-  "Ավան":  "Аван",
+  "Ավան": "Аван",
   "Rooms": "Комнаты",
   "Area": "Площадь",
   "Price": "Цена",
@@ -64,8 +64,8 @@
   "No": "Нет",
   "Rent_Page": "Аренда",
   "Contact_Us": "Связаться с нами",
-  "Contact_Summary" : "Мы преданная команда профессионалов в сфере недвижимости, которые помогут вам найти дом своей мечты или инвестиционную недвижимость.",
-  "Telephone": "Тел." ,
+  "Contact_Summary": "Мы преданная команда профессионалов в сфере недвижимости, которые помогут вам найти дом своей мечты или инвестиционную недвижимость.",
+  "Telephone": "Тел.",
   "Address": "Адрес",
   "Our_Location": "Наше Расположение",
   "Submit": "Отправить",
@@ -75,42 +75,387 @@
   "Build_type": "Материал дома",
   "Condition": "Состояние",
   "Total_space": "Площадь",
-  "M":"М",
+  "M": "М",
   "Contact_Me": "Отправить",
-  "Your_Number":"Ваш Номер",
-  "FACILITIES":"Комунальные удобства",
-  "More_Information":"Подробности",
-  "Gas":"Газ",
-  "Internet":"Интернет",
-  "Electricity":"Электричество",
-  "Water":"Вода",
-  "Heating_System":"Отопление",
-  "Conditioner":"Кондиционер",
-  "Sunny":"Светлый",
-  "Beautiful_view":"Красивый вид",
-  "Fireplace":"Камин",
-  "Elevator":"Лифт",
-  "Storage_room":"Кладовка",
-  "Roadside":"Придорожный",
-  "Sauna":"Сауна",
-  "Kitchen_furniture":"Кухонная мебель",
-  "Parking":"Парковка",
-  "Open_balcony":"Открытый балкон",
-  "Basement":"Подвал",
-  "High_first_floor":"Бельэтаж",
-  "Near_the_bus_stop":"Автобусная станция",
-  "Park":"Парк",
-  "Furniture":"Мебель",
-  "Security":"Охрана",
-  "Loggia":"Лоджия",
-  "Attic":"Мансарда",
-  "Heated_loor":"Теплый пол",
-  "Metro":"Метро",
-  "Fenced":"Огрождение",
-  "Technics":"Техника",
+  "Your_Number": "Ваш Номер",
+  "FACILITIES": "Комунальные удобства",
+  "More_Information": "Подробности",
+  "Gas": "Газ",
+  "Internet": "Интернет",
+  "Electricity": "Электричество",
+  "Water": "Вода",
+  "Heating_System": "Отопление",
+  "Conditioner": "Кондиционер",
+  "Sunny": "Светлый",
+  "Beautiful_view": "Красивый вид",
+  "Fireplace": "Камин",
+  "Elevator": "Лифт",
+  "Storage_room": "Кладовка",
+  "Roadside": "Придорожный",
+  "Sauna": "Сауна",
+  "Kitchen_furniture": "Кухонная мебель",
+  "Parking": "Парковка",
+  "Open_balcony": "Открытый балкон",
+  "Basement": "Подвал",
+  "High_first_floor": "Бельэтаж",
+  "Near_the_bus_stop": "Автобусная станция",
+  "Park": "Парк",
+  "Furniture": "Мебель",
+  "Security": "Охрана",
+  "Loggia": "Лоджия",
+  "Attic": "Мансарда",
+  "Heated_loor": "Теплый пол",
+  "Metro": "Метро",
+  "Fenced": "Огрождение",
+  "Technics": "Техника",
   "Lift": "Лифт",
   "Daily_Page": "Ежедневно",
   "Այո": "Да",
   "Ոչ": "Нет",
-  "Newly_Built": "Новостройки"
+  "Newly_Built": "Новостройки",
+  "Ա. Սերոբ փող.": "А.Сероб ул.",
+  "Ա. Տիգրանյան փող.": "А.Тигранян ул.",
+  "Ավետիսյան փող.": "Аветисян ул.",
+  "Ադոնց փող.": "Адонц ул.",
+  "Ազատության 2-րդ նրբանցք": "Азатутян 2 пер.",
+  "Ազատության պող.": "Азатутян просп.",
+  "Հակոբյան փող": "Азатутян_пер.",
+  "Արաբկիր 17 փող.": "Акопян ул.",
+  "Արաբկիր 19 փ.": "Арабкир 17 ул.",
+  "Արաբկիր 21 փող.": "Арабкир 19 ул.",
+  "Արաբկիր 25 փող..": "Арабкир 21 ул.",
+  "Արաբկիր 27 փող.": "Арабкир 25 ул.",
+  "Արաբկիր 37 փող.": "Арабкир 27 ул.",
+  "Արաբկիր 39 փող.": "Арабкир 37 ул.",
+  "Արաբկիր 43 փող.": "Арабкир 39 ул.",
+  "Արաբկիր 51 փող.": "Арабкир 43 ул.",
+  "Բաբայան փող": "Арабкир 51 ул.",
+  "Բակունց փող.": "Бабаян ул.",
+  "Բարբուսի փող": "Бакунц ул.",
+  "Վ. Դավթյան փող": "Барбюс ул.",
+  "Վաղարշյան փող.": "В.Давтян ул.",
+  "Վրացական 4րդ նրբ.": "Вагаршян ул.",
+  "Վրացական փող.": "Врацакан 4 пер.",
+  "Գ. Արծրունի փող": "Врацакан ул.",
+  "Քոչարի փող": "Г.Арцруни ул.",
+  "Վ. Համբարձումյան փող": "Г.Кочар ул.",
+  "Գործկոմի փող.": "В. Амбарцумян ул.",
+  "Գրիբոյեդով 1 նրբ.": "Горцкоми ул.",
+  "Գրիբոյեդովի փող": "Грибоедов 1 пер.",
+  "Գուլական փող": "Грибоедов ул.",
+  "Գյուլբենկյան փող.": "Гулакян ул.",
+  "Երզնկյան փող.": "Гюльбенкян ул.",
+  "Զարյան փող": "Ерзнкян ул.",
+  "Կապանցյան փող": "Зарьян ул.",
+  "Կասյան փող": "Капанцян ул.",
+  "Քեռու փող": "Касьян ул.",
+  "Կիևյան 1 նրբ.": "Керу ул.",
+  "Կիևյան փող": "Киевян 1 пер.",
+  "Կոմիտաս պող.": "Киевян ул.",
+  "Մալխասյան փող": "Комитас просп.",
+  "Մամիկոնյանց նրբ.": "Малхасян ул.",
+  "Մամիկոնյանց փող": "Мамиконянц пер.",
+  "Ն. Տիգրանյան փկղ.": "Мамиконянц ул.",
+  "Ն. Դուման փող": "Н. Тигранян туп.",
+  "Ն. Տիգրանան փող": "Н.Думан ул.",
+  "Հ. Արղության փող": "Н.Тигранян ул.",
+  "Հ. Էմին փող": "О.Аргутян ул.",
+  "Օրբելի փող": "О.Эмин ул.",
+  "Փափազյան փող": "Орбели ул.",
+  "Ռիգայի փող": "Папазян ул.",
+  "Ս. Սաքո փող": "Рига ул.",
+  "Սոսե փող.": "С.Сако ул.",
+  "Սունդուկյան փող": "Сосе ул.",
+  "Սուրենսանց փող": "Сундукян ул.",
+  "Տոլբուխինա փող": "Суренянц ул.",
+  "Խաչատրյան 1 նրբ.": "Тoлбухинa ул.",
+  "Խաչատրյան փող.": "Хачатрян 1 пер.",
+  "Շահսուվարյան փող.": "Хачатрян ул.",
+  "Շիրվանզադե փող": "Шахсуварян ул.",
+  "Ավան Առինջ 1 միկր.": "Аван Ариндж 1 мик.",
+  "Ավան Առինջ 2 միկր.": "Аван Ариндж 2 мик.",
+  "Ավան Առինջ Վ. Տերյան_ 1 փող.": "Аван Ариндж В. Терян_ 1 ул.",
+  "Ավան Վարուժան թղմ.": "Аван Варужан уч.",
+  "Ավան Դուրյան": "Аван Дурян уч.",
+  "Ավան Իսահակյան թաղ. ": "Аван Исаакян уч.",
+  "Ավան Քուչակ թաղ.": "Аван Кучак уч.",
+  "Ավան Նարեկացի թաղ.": "Аван Нарекаци уч.",
+  "Ավան Օգանեսյան թաղ.": "Аван Оганесян уч.",
+  "Ավան Սայաթ Նովա թաղ.": "Аван Саят Нова уч.",
+  "Ավան Թումանյան թաղ.": "Аван Туманян уч.",
+  "Ավան Չարենց թաղ.": "Аван Чаренц уч.",
+  "Առինջ Աբովյան թաղ.": "Ариндж Абовян уч.",
+  "Առինջ Մ. Մկրտչյան": "Ариндж М.Мкртчян",
+  "Առինջ Պ. Սեւակ թաղ.": "Ариндж П.Севак уч.",
+  "Աճառյան փող": "Ачарян ул.",
+  "Խուդյակովի փող": "Худяков ул.",
+  "Ծարավ Աղբյուր": "Ц.Ахбюр",
+  "16-րդ Թղմ.": "16-й квартал",
+  "Ա. Սարգսյան փող.": "А.Сарксян ул.",
+  "Աբելյան փող.": "Абелян ул.",
+  "Հալաբյան փող": "Алабян ул.",
+  "Արզումանյան փող": "Арзуманян ул.",
+  "Բաշինջաղյան 1 նրբ.": "Башинджагян 1 пер.",
+  "Բաշինջաղյան 1 փող.": "Башинджагян 1 ул.",
+  "Բաշինջաղյան 2 նրբ.": "Башинджагян 2 пер.",
+  "Բաշինջաղյան փող.": "Башинджагян ул.",
+  "Է. Ալիխանյան փող.": "Е.Алиханян ул.",
+  "Լենինականի փող.": "Ленинакани ул.",
+  "Լենինգրադյան": "Ленинградян",
+  "Մազմանյան փող": "Мазманян ул.",
+  "Մարգարյան 1 նրբ.": "Маркарян 1 пер.",
+  "Մարգարյան 2 նրբ.": "Маркарян 2 пер.",
+  "Մարգարյան նրբ.": "Маркарян пер.",
+  "Մարգարյան փող.": "Маркарян ул.",
+  "Մելքումովի փող": "Мелкумов ул.",
+  "Նազարբեկյան փող.": "Назарбекян ул.",
+  "Նորաշեն թղմ.": "Норашен квартал",
+  "Սիսակյան փող": "Сисакян ул.",
+  "Ֆուչիկ 1 նրբ": "Фучик 1 пер.",
+  "Ֆուչիկի փող": "Фучик ул.",
+  "Շինարարների փող.": "Шинарарнери ул.",
+  "Շիրազի փող": "Шираз ул.",
+  "Էստոնական փող.": "Эстонакан ул.",
+  "Ա.Միկոյան փող": "А.Микоян ул.",
+  "Աղաբաբյան": "Агабабян",
+  "ԳԵՎՈՐԳՅԱՆ": "Геворгян",
+  "ԴԱՎԻԹԱՇԵՆ 1 թղմ.": "Давидашен 1 уч.",
+  "ԴԵՎԻԹԱՇԵՆ 2 թղմ.": "Давидашен 2 уч.",
+  "ԴԱՎԻԹԱՇԵՆ 3 թղմ.": "Давидашен 3 уч.",
+  "ԴԱՎԻԹԱՇԵՆ 4 թղմ.": "Давидашен 4 уч.",
+  "Փիրումյան": "Пирумян",
+  "Սասնա Ծռեր փող.": "Сасна Црер ул.",
+  "Տ. Պետրոսյան փող": "Т.Петросян ул.",
+  "Ագարոնյան փող": "Агаронян ул.",
+  "Ասատրյան փող": "Асратян ул.",
+  "Վ. Վաղյան փող": "В.Вагян ул.",
+  "ԳԱՍՏԵԼԼՈ 1 փող.": "Гастелло 1 ул.",
+  "ԳԱՍՏԵԼԼՈ 2 փող.": "Гастелло 2 ул.",
+  "ԳԱՍՏԵԼԼՈ 4 փող.": "Гастелло 4 ул.",
+  "ԳԱՍՏԵԼԼՈ 6 փող.": "Гастелло 6 ул.",
+  "Գոգոլի փող": "Гоголь ул.",
+  "Դ. Անհաղթ փող.": "Д.Анахт ул.",
+  "Դրո փող.,": "Дро ул.",
+  "Կ. Ուլնեցի 1 փկղ.": "К.Улнеци 1 туп.",
+  "Կ. Ուլնեցի 2 փկղ.": "К.Улнеци 2 туп.",
+  "Կ. Ուլնեցի 3 փկղ.": "К.Улнеци 3 туп.",
+  "Կ. Ուլնեցի փող": "К.Улнеци ул.",
+  "Կամարակ 16 փող.": "Камарак 16 ул.",
+  "Քանաքեռ 14 փող.": "Канакер 14 ул.",
+  "Քանաքեռ հիդրոէլեկտրակայան": "Канакер ГЭС",
+  "Մելիքյան փող": "Меликян ул.",
+  "Ներսիսյան փակուղի": "Нерсисян тупик",
+  "Ներսիսյան փող": "Нерсисян ул.",
+  "Պ. Սեւակի փող": "П.Севак ул.",
+  "Ռայնիս փող..": "Райнис ул.",
+  "Ռուբինյանցի փող": "Рубинянц ул.",
+  "Սարկավագի փող": "Саркаваги ул.",
+  "Թբիլիսյան խճուղի": "Тбилиское шоссе пер.",
+  "Թբիլիսյան խճուղի 1 նրբ.": "Тбилисское шоссе 1 пер.",
+  "Շովրոյան փող.": "Шовроян ул.",
+  "Էմինեսկուի փող": "Эминеску ул.",
+  "Ագաթանգեղոս փող": "Агатангегос ул.",
+  "Այգեձոր 1 նրբ.": "Айгедзор 1 пер.",
+  "Այգեձոր փող": "Айгедзор ул.",
+  "Այգեստան 9 փող.": "Айгестан_9_ул.",
+  "Արգիշտի փող": "Аргишти ул.",
+  "Աթենք փող.": "Атенк ул.",
+  "Վրացյան փող.": "Врацян ул.",
+  "Հերիացի փող.": "Гераци ул.",
+  "Գլինկայի փող.": "Глинка ул.",
+  "Ձորափի փող": "Дзорап ул.",
+  "Ե. Քոչար փող": "Е.Кочар ул.",
+  "Զավարյան փող": "Заварян ул.",
+  "Իսակովի պող.": "Исаков пр.",
+  "Իսրաելյան փող.": "Исраелян ул.",
+  "Կիլիկիա թղմ.": "Киликия уч.",
+  "Կուզնեցովի փող": "Кузнецов ул.",
+  "Լեո փող.": "Лео ул.",
+  "Լուսավորիչ փող": "Лусаворич ул.",
+  "Մ. Մելքոնյան փող.": "М. Мелконян ул.",
+  "Մկկրտչյան փող.": "М.Мкртчян ул.",
+  "Մայիսյան փող": "Маисян ул.",
+  "Մյասնիկյան պող.": "Мясникян пр.",
+  "Նար-Դոս 1 նրբ.": "Нар-Дос 1 пер.",
+  "Նար-Դոս փող.": "Нар-Дос ул.",
+  "Պարոնյանների փող.": "Паронян ул.",
+  "Պռոշյան 1 նրբ.": "Прошян 1 пер.",
+  "Պռոշյան փող.": "Прошян ул.",
+  "Տ. Մեծ պող.": "Т.Мец просп.",
+  "Տ. Մեծ  նրբ.": "Т.Мец_пер.",
+  "Ֆրիկի փող..": "Фрик ул.",
+  "Խմելնիցկիի փող.": "Хмельницкий ул.",
+  "Խուրենացու 1 փկղ.": "Хоренаци 1 туп.",
+  "Խորենացու փող": "Хоренаци ул.",
+  "Քրիստափորի փող": "Христафор ул.",
+  "Ծատուրյան փող": "Цатурян ул.",
+  "Ծիծեռնակաբերդի խճուղի": "Цицернакабердское шоссе",
+  "Չայկովսկու փող": "Чайковский ул.",
+  "Ա. Մանուկյան փող": "А.Манукян ул.",
+  "Աբովյան փկղ.": "Абовян туп.",
+  "Աբովյան փող.": "Абовян ул.",
+  "Ազայան փող": "Агаян ул.",
+  "Ամիրյան փող": "Амирян ул.",
+  "Հանրապետության փող": "Анрапетутян ул.",
+  "Անտառային փող": "Антараин ул.",
+  "Արամի նրբ.": "Арами пер.",
+  "Արամի փող.": "Арами ул.",
+  "Բաղրամյան 1 նրբ.": "Баграмян 1 пер.",
+  "Բաղրամյան 1 պող.": "Баграмян 1 пр.",
+  "Բաղրամյան 1 փկղ.": "Баграмян 1 туп.",
+  "Բաղրամյան 2 փկղ.": "Баграмян 2 туп.",
+  "Բաղրամյան 3 նրբ.": "Баграмян 3 пер.",
+  "Բաղրամյան պող.": "Баграмян просп.",
+  "Բայրոնի փող": "Байрон ул.",
+  "Բելյակովի փող": "Беляков ул.",
+  "Բուզանդի փող": "Бюзанд ул.",
+  "Վ. Անտառային փող": "В.Антараин ул.",
+  "Վարդանանց փող.": "Вардананц ул.",
+  "Դեղատան փող": "Дегатан ул.",
+  "Դեմիրճյան փող": "Демирчян ул.",
+  "Ջրաշեն փող": "Джрашат ул.",
+  "Ե. Կողբացի փող": "Е.Кохбаци ул.",
+  "Եկմալյան փող.": "Екмалян ул.",
+  "Զաքյան 1 նրբ.": "Закиян 1 пер.",
+  "Զաքյան փող": "Закиян ул.",
+  "Իսահակյան փող.": "Исаакян ул.",
+  "Կորյուն 1 նրբ.": "Корюн 1 пер.",
+  "Կորյունի փող": "Корюн ул.",
+  "Լ. Ազգալդյան": "Л. Азгалдян",
+  "Լ. Կամսար փող": "Л.Камсар ул.",
+  "Լալայանց փող": "Лалаянц ул.",
+  "Մաշտոցի պողոտա": "Маштоц просп.",
+  "Մոսկովյան փող": "Московян ул.",
+  "Նալբանդան փող": "Налбандян ул.",
+  "Փարպեցի փող": "Парпеци ул.",
+  "Պլեհանովի փող..": "Плеханов ул.",
+  "Պուշկին փող.": "Пушкин ул.",
+  "Ս. Երևանցի փող.": "С.Ереванци ул.",
+  "Սարյան փող": "Сарьян ул.",
+  "Սախարովի փող.": "Сахаров ул.",
+  "Սայաթ-Նովա պող.": "Саят-Нова просп.",
+  "Հյուսիսային պող.": "Северный пр.",
+  "Սպենդիարով փող": "Спендиаров ул.",
+  "Թամանյան փող": "Таманян ул.",
+  "Տերյան փող": "Терьян ул.",
+  "Տպագրիչների փող": "Тпагричнери ул.",
+  "Թումանյան փող": "Туманян ул.",
+  "Հ. Էմին փող.": "ул․ Г. Эмина",
+  "Խանջյան փող.": "Ханджян ул.",
+  "Չարենց փող.": "Чаренц ул.",
+  "Մայիսի 9 փող.": "9th May St.",
+  "Արագածի փող": "Aragatsi St.",
+  "Արտաշիսյան փող.": "Artashisyan St.",
+  "Արշակունյաց փող.": "Arshakunyats St.",
+  "Բագրատունյաց 1 նրբ.": "Bagratunyats 1st lane",
+  "Բագրատունյաց փող.": "Bagratunyats St.",
+  "Վ. Շենգավիթ 2 փող.": "V. Shengavit 2 st.",
+  "Գ. Նժդեհ փող.": "G. Nzdeh St.",
+  "Եղբայրության փող.": "Eghpayrutian St.",
+  "Մանանդյան փող": "Manandyan St.",
+  "Մանթաշյան փող.": "Mantashyan St.",
+  "Ն. Շենգավիթ 11 փող.": "N. Shengavit 11 st.",
+  "Հովսեփյան փող": "Hovsepyan St.",
+  "Ս. Տարոնցի փող": "S. Taronts St.",
+  "Թադևոսյան նրբ.": "Tadevosyan lane.",
+  "Թադևոսյան փող": "Tadevosyan St.",
+  "Ֆրունզե փող.": "Frunze St.",
+  "Չեխովի փող": "Chekhov St.",
+  "Շարուրի փող.": "Sharur St.",
+  "Շիրակի փող": "Shirak St.",
+  "Ավանեսովի փող": "Аванесов ул.",
+  "Արցախի պող.": "Арцах пр.",
+  "Արցախի փող": "Арцах ул.",
+  "Ատոյան պող.": "Атоян пр.",
+  "Վարդաշեն": "Вардашен ",
+  "Գաջեգործների փող.": "Гаджегорцнери ул.",
+  "Դ. Սասունցի փող.": "Д.Сасунци ул.",
+  "Լիսինյան փող.": "Лисинян ул.",
+  "Մուրացան փող": "Мурацан ул.",
+  "Ն. Արեշի փող": "Н.Ареш ул.",
+  "Նուբարաշեն": "Нубарашен",
+  "Ռոստովյան փող": "Ростовян ул.",
+  "Սարի թաղ": "Сари Тах .",
+  "Խ. Դոնի փող": "Х. Дон ул.",
+  "Էրեբունի փող": "Эребуни ул.",
+  "Ն. Մարաշի թղմ.": "Н.Мараш уч.",
+  "Արմենակյան փող": "Арменакян ул.",
+  "Արմենակյան 1 նրբ.": "Арменакян 1 пер.",
+  "Բ. Մուրադյան փող": "Б.Мурадян ул.",
+  "Բագրևանդ փող.": "Багреванд ул.",
+  "Բաղյան 1 նրբ.": "Багян 1 пер.",
+  "Բաղյան 2 նրբ.": "Багян 2 пер.",
+  "Բաղյան փող": "Багян ул.",
+  "Բակունց 2 նրբ.": "Бакунц 2 пер.",
+  "Բորյան փող.": "Бакунц ул.",
+  "Գայի պող.": "Борян ул.",
+  "Գալշոյան փող": "Гай просп.",
+  "Գյուլիքեխվյան նրբ": "Галшоян ул.",
+  "Գյուլիքեխվյան փող..": "Гюликевхвян пер.",
+  "Գյուրջյան փող": "Гюликевхян ул.",
+  "Դ. Մալյան նրբ.": "Гюрджян ул.",
+  "Դ. Մալյան փող": "Д.Малян пер.",
+  "Քոչարյան փող..": "Д.Малян ул.",
+  "Լվովյան նրբ.": "Кочарян ул.",
+  "Լվովյան փող": "Львовян пер.",
+  "Լյուքսեմբուրգ 1 նրբ.": "Львовян ул.",
+  "Լյուքսեմբուրգի փող.": "Люксембург 1 пер.",
+  "Մառի փող.": "Люксембург ул.",
+  "Մառի նրբ.": "Мары ул.",
+  "Միկոյան փող": "Мары_пер.",
+  "Մոլդովական փող.": "Микоян ул.",
+  "Նանսենի փող": "Молдовакан ул.",
+  "Հովհաննիսյան փող": "Нансен ул.",
+  "Սաֆարյան փող": "Оганесян ул.",
+  "Ստեփանյան փող": "Сафарян ул.",
+  "Թոթովենց փող": "Степанян ул.",
+  "Շոփրոնի 2 նրբ.": "Тотовенц ул.",
+  "Շոփրոնի 3 նրբ.": "Шопрон 2 пер.",
+  "Շոփրոն փող.": "Шопрон 3 пер.",
+  "7-րդ Մասիվ": "7-й Н. М.",
+  "8-րդ Մասիվ": "8-й Н. М.",
+  "Վիլնյուսի փող": "Вильнюс ул.",
+  "Ջրվեժ Բանավան": "Джрвеж Банаван",
+  "Ջրվեժ Մայակ": "Джрвеж Маяк",
+  "Կարախանյան փող": "Караханян ул.",
+  "Մինսկի փող": "Минск ул.",
+  "Ու. Ավետիսյան փող": "У.Аветисян ул.",
+  "Անդրանիկի փող": "Андраник ул.",
+  "ԱՐ. Մանուկյան փող": "Ар.Манукян ул.",
+  "Արարատյան 1-ին Մ.": "Араратян 1-й М.",
+  "Բաբաջանյան փող.": "Бабаджанян ул.",
+  "Իսակովի պող.": "Исаков просп.",
+  "Կուրղինյան փող.": "Кургинян ул.",
+  "Միքայելյան փող.": "Микаелян ул.",
+  "Օհանովի փող": "Оганов ул.",
+  "Ռ. Մելիքյան փող": "Р. Меликян ул.",
+  "Րաֆֆու փող": "Раффи ул.",
+  "Սվաճյան փող": "Свачян ул.",
+  "Սեբաստիա փող.": "Себастия ул.",
+  "Տիչինա փող..": "Тычина ул.",
+  "Ծերենց փող.": "Церенц ул.",
+  "Շահումյան 8 փող.": "Шаумян 8 ул.",
+  "Շերամի փող.": "Шерам ул.",
+  "Հողատարածք Վաճառք": "Земля для продажи",
+  "Բնակարան Վաճառք": "Продажа квартиры",
+  "Ստալինկա": "Сталинка",
+  "Քարե":"Камень",
+  "Պոստ Խրյուշովկա": "Пост Хрущевка",
+  "Խրյուշովկա":"Хрюшовка",
+  "Բարձրահարկ": "Верхний этаж",
+  "Խոշոր Պանելային":"Большая панель",
+  "Կասետաին": "На кассету",
+  "վերանորոգված դիզաիներական ոճով":"ремонт в дизайнерском стиле",
+  "հին վերանորոգում": "старый ремонт",
+  "զրոական":"нуль",
+  "վերանորոգում 10 ավել": "отремонтирован еще 10",
+  "վերանորոգում 5-10":"ремонт 5-10г",
+  "վերանորոգում 2-5": "ремонт 2-5г",
+  "վերանորոգված 2 տարի":"ремонт 2 года",
+  "վերանորոգված չբնակեցված": "отремонтированный нежилой",
+  "Կոմերցիոն Վաճառք": "Продается коммерческое помещение",
+  "Առանձնատուն Վաճառք": "Продается частный дом",
+  "Վաճառք": "Продается",
+  "Վարձ": "Aрендa",
+  "Օրավարձ": "Ежедневно"
 }
